--- a/README
+++ b/README
@@ -2,7 +2,7 @@ feedreader is a light-weight RSS reader that sits in the user's system tray.
 It requires on GTK2 and libxml2.
 
 USAGE
-Feeds are added via a file called ".rssfeeds" in located in the user's $HOME folder.
+Feeds are added via a file called "rssfeeds" in located in the user's $HOME/.config/feedreader folder.
 This file will not be created automatically, so it is up to the user to do so.
 The layout is one feed per line with the following format:
 
@@ -12,9 +12,3 @@ Example:
 
     My Favorite RSS\http://www.example.com/feed.rss
 
-In addition, labels can be created to help organize the user's list of feeds.
-This is done by replacing the URL with "LABEL".
-
-Example:
-
-    My Category\LABEL
